--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- 网格容器 -->
   <div class="grid-container">
-    <a href="data/reserve" class="grid-item">
+    <a href="data/data/MiNiworld-Ver" class="grid-item">
       <div class="grid-content">
         <img src="PNG/预留.png" alt="图片（预留）">
         <div class="grid-text">
