--- a/data/MiNiworld-Ver/index.html
+++ b/data/MiNiworld-Ver/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<title>三创梦工作室</title>
+<title>迷你世界Ver版</title>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <style id="wp-emoji-styles-inline-css" type="text/css">
