--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="grid-text">
           <h2>迷你世界Ver版</h2>
           <p>发布日期：2024年8月20日</p>
+          <p>紧急制作中<p>
         </div>
       </div>
     </a>
