--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="grid-content">
         <img src="PNG/迷你世界0.30.0修复版宣传图.jpg" alt="迷你世界0.30.0修复版封面">
         <div class="grid-text">
-          <h2>三创梦工作室使用3年时间修复了迷你世界0.30.0</h2>
+          <h2>迷你世界0.30.0</h2>
           <p>发布日期：2024年1月2日</p>
         </div>
       </div>
@@ -45,8 +45,8 @@
       <div class="grid-content">
         <img src="PNG/预留.png" alt="图片（预留）">
         <div class="grid-text">
-          <h2>预留</h2>
-          <p>发布日期：预留</p>
+          <h2>公益</h2>
+          <p>发布日期：正在策划中</p>
         </div>
       </div>
     </a>
