--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>简单镜像站</title>
+    <title>镜像站</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,7 +27,7 @@
     </script>
 </head>
 <body onload="loadResource()">
-    <h1>简单镜像站</h1>
+    <h1>请输入网址栏输入https://scm.aug.lol/index2.html?url=<要加速的网站></h1>
     <iframe id="resourceFrame" title="资源展示"></iframe>
 </body>
 </html>
