--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
     </script>
 </head>
 <body onload="loadResource()">
-    <h1>请输入网址栏输入https://scm.aug.lol/index2.html?url=<要加速的网站></h1>
+    <p>请在网址栏输入https://scm.aug.lol/index2.html?url=<要加速的网站></q>
     <iframe id="resourceFrame" title="资源展示"></iframe>
 </body>
 </html>
