--- a/index2.html
+++ b/index2.html
@@ -21,13 +21,11 @@
             if (resourceUrl) {
                 document.getElementById('resourceFrame').src = resourceUrl;
             } else {
-                alert('请提供一个URL参数。');
+                alert('URL参数:?url=<需要加速的网站>。');
             }
         }
     </script>
 </head>
 <body onload="loadResource()">
-    <p>请在网址栏输入https://scm.aug.lol/index2.html?url=<要加速的网站></q>
-    <iframe id="resourceFrame" title="资源展示"></iframe>
 </body>
 </html>
