--- a/music.html
+++ b/music.html
@@ -4,14 +4,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Request Page</title>
+    <style>
+        body {
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .light-mode {
+            background-color: #fff;
+            color: #333;
+        }
+        .dark-mode {
+            background-color: #333;
+            color: #fff;
+        }
+        audio, button {
+            background-color: #f0f0f0;
+            color: #333;
+            border: 1px solid #ccc;
+        }
+        audio:focus, button:focus {
+            outline: none;
+            border-color: #0078d7;
+        }
+    </style>
     <script>
+        // 定义语言变量
+        const languages = {
+            'en': {
+                'title': 'Music Request Page',
+                'welcome': 'Welcome to SCM Music Request',
+                'instruction': 'Enter the URL ID in the navigation bar to request a song.',
+                'details': 'Song Details',
+                'id': 'ID',
+                'url': 'URL',
+                'bitrate': 'Bitrate',
+                'size': 'Size',
+                'md5': 'MD5',
+                'level': 'Level',
+                'fee': 'Fee',
+                'error': 'Failed to load song details.',
+                'noUrlId': 'Please enter a URL ID:',
+                'inputPlaceholder': 'Enter URL ID',
+                'go': 'Go',
+                'invalidId': 'Please enter a valid URL ID.',
+                'toggleMode': 'Toggle Dark Mode'
+            },
+            'zh': {
+                'title': '音乐请求页面',
+                'welcome': '欢迎使用SCM音乐请求',
+                'instruction': '在导航栏中输入URL ID以请求歌曲。',
+                'details': '歌曲详细信息',
+                'id': 'ID',
+                'url': '链接',
+                'bitrate': '比特率',
+                'size': '大小',
+                'md5': 'MD5',
+                'level': '级别',
+                'fee': '费用',
+                'error': '加载歌曲详情失败。',
+                'noUrlId': '请输入URL ID:',
+                'inputPlaceholder': '输入URL ID',
+                'go': '前往',
+                'invalidId': '请输入有效的URL ID。',
+                'toggleMode': '切换夜间模式'
+            }
+        };
+
+        // 默认语言设置为英语
+        let currentLanguage = 'en';
+
+        function setLanguage(lang) {
+            currentLanguage = lang;
+            document.title = languages[currentLanguage].title;
+            document.getElementById('welcomeText').textContent = languages[currentLanguage].welcome;
+            document.getElementById('instructionText').textContent = languages[currentLanguage].instruction;
+            document.getElementById('toggleModeButton').textContent = languages[currentLanguage].toggleMode;
+            fetchSongDetails();
+        }
+
+        function toggleTheme() {
+            const body = document.body;
+            if (body.classList.contains('light-mode')) {
+                body.classList.replace('light-mode', 'dark-mode');
+                document.getElementById('toggleModeButton').textContent = languages[currentLanguage].toggleMode.split(' Dark')[0] + ' Light Mode';
+            } else {
+                body.classList.replace('dark-mode', 'light-mode');
+                document.getElementById('toggleModeButton').textContent = languages[currentLanguage].toggleMode.split(' Light')[0] + ' ';
+            }
+            saveThemePreference();
+        }
+
+        function saveThemePreference() {
+            const prefersDarkScheme = document.body.classList.contains('dark-mode');
+            if (prefersDarkScheme) {
+                localStorage.setItem('theme', 'dark');
+            } else {
+                localStorage.setItem('theme', 'light');
+            }
+        }
+
         function fetchSongDetails() {
             const urlParams = new URLSearchParams(window.location.search);
             const urlId = urlParams.get('urlid');
 
             if (urlId) {
                 // 构建请求URL
-                const requestUrl = `https://music.cyrilstudio.top/song/url?id=${urlId}`; 
+                const requestUrl = `https://music.cyrilstudio.top/song/url?id=${urlId}`;   
 
                 // 创建一个fetch请求来获取数据
                 fetch(requestUrl)
@@ -31,14 +128,17 @@
                     })
                     .catch(error => {
                         console.error('There has been a problem with your fetch operation:', error);
-                        document.getElementById('songDetails').innerHTML = 'Failed to load song details.';
+                        document.getElementById('songDetails').innerHTML = languages[currentLanguage].error;
                     });
             } else {
                 // 如果没有urlid参数，显示输入框
                 document.getElementById('songDetails').innerHTML = `
-                    <p>Please enter a URL ID:</p>
-                    <input type="text" id="urlIdInput" placeholder="Enter URL ID">
+                    <p>${languages[currentLanguage].noUrlId}</p>
+                    <input type="text" id="urlIdInput" placeholder="${languages[currentLanguage].inputPlaceholder}">
                     <button onclick="redirectToMusicPage()">Go</button>
+                    <button onclick="setLanguage('zh')">中文</button>
+                    <button onclick="setLanguage('en')">English</button>
+                    <button id="toggleModeButton" onclick="toggleTheme()">${languages[currentLanguage].toggleMode}</button>
                 `;
             }
         }
@@ -47,18 +147,19 @@
             // 假设songData是一个包含歌曲信息的对象
             const songDetails = document.getElementById('songDetails');
             songDetails.innerHTML = `
-                <h2>Song Details</h2>
-                <p>ID: ${songData.id}</p>
-                <p>URL: <a href="${songData.url}" target="_blank">${songData.url}</a></p>
-                <p>Bitrate: ${songData.br} kbps</p>
-                <p>Size: ${songData.size} bytes</p>
-                <p>MD5: ${songData.md5}</p>
-                <p>Level: ${songData.level}</p>
-                <p>Fee: ${songData.fee}</p>
+                <h2>${languages[currentLanguage].details}</h2>
+                <p>${languages[currentLanguage].id}: ${songData.id}</p>
+                <p>${languages[currentLanguage].url}: <a href="${songData.url}" target="_blank">${songData.url}</a></p>
+                <p>${languages[currentLanguage].bitrate}: ${songData.br} kbps</p>
+                <p>${languages[currentLanguage].size}: ${songData.size} bytes</p>
+                <p>${languages[currentLanguage].md5}: ${songData.md5}</p>
+                <p>${languages[currentLanguage].level}: ${songData.level}</p>
+                <p>${languages[currentLanguage].fee}: ${songData.fee}</p>
                 <audio controls>
                     <source src="${songData.url}" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
+                <button id="toggleModeButton" onclick="toggleTheme()">${languages[currentLanguage].toggleMode}</button>
             `;
         }
 
@@ -67,17 +168,28 @@
             if (urlId) {
                 window.location.href = `music.html?urlid=${encodeURIComponent(urlId)}`;
             } else {
-                alert('Please enter a valid URL ID.');
+                alert(languages[currentLanguage].invalidId);
             }
         }
 
         // 页面加载完成后执行fetchSongDetails函数
-        window.onload = fetchSongDetails;
+        window.onload = function() {
+            fetchSongDetails();
+            // 检测系统偏好的颜色模式
+            const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
+            const savedTheme = localStorage.getItem('theme');
+            if (prefersDarkScheme.matches || savedTheme === 'dark') {
+                document.body.classList.add('dark-mode');
+                document.getElementById('toggleModeButton').textContent = languages[currentLanguage].toggleMode.split(' Dark')[0] + ' Light Mode';
+            } else {
+                document.body.classList.add('light-mode');
+            }
+        };
     </script>
 </head>
 <body>
-    <h1>Welcome to SCM Music Request</h1>
-    <p>Enter the URL ID in the navigation bar to request a song.</p>
+    <h1 id="welcomeText">Welcome to SCM Music Request</h1>
+    <p id="instructionText">Enter the URL ID in the navigation bar to request a song.</p>
     <div id="songDetails">
         <!-- 歌曲详细信息将在这里显示 -->
     </div>
