--- a/music.html
+++ b/music.html
@@ -108,7 +108,7 @@
 
             if (urlId) {
                 // 构建请求URL
-                const requestUrl = `https://music.cyrilstudio.top/song/url?id=${urlId}`;   
+                const requestUrl = `https://api.pearktrue.cn/api/cloudmusic/parse/?id=${urlId}`;   
 
                 // 创建一个fetch请求来获取数据
                 fetch(requestUrl)
