--- a/miniReShade.html
+++ b/miniReShade.html
@@ -198,9 +198,9 @@
      </p>
      <p>
       <div>
-       <!--  2.网盘下载 :
+       2.网盘下载 :
   <span style="color: #0000ff;">
-    <a href="跳转链接" onclick="copyToClipboard('这里填提取码');" style="color: #0000ff;">
+    <a href="https://pan.huang1111.cn/s/5X4ngIl" onclick="copyToClipboard('lmitra');" style="color: #0000ff;">
       【链接直达】
     </a>
   </span>
@@ -220,7 +220,7 @@ function copyToClipboard(text) {
         alert('复制失败，请手动复制');
     }
 }
-</script>-->
+</script>
       </div>
      </p>
     </div>
