--- a/miniReShade.html
+++ b/miniReShade.html
@@ -179,7 +179,7 @@
      <h2>
       效果：
      </h2>
-     <img alt="三创梦工作室ICO" src="wp-content\uploads\2024\11\17\MINIReShade.png" switch-src="wp-content\uploads\2024\11\17\MINIReShade.png"/>
+     <img alt="三创梦工作室ICO" src="https://s21.ax1x.com/2024/11/22/pAfY6v4.png" switch-src="wp-content\uploads\2024\11\17\MINIReShade.png"/>
      <h2>
       教程：
      </h2>
