--- a/miniReShade.html
+++ b/miniReShade.html
@@ -206,8 +206,16 @@
       </span>
      </p>
      <p>
+      2.QQ2群下载：
+      <span style="color: #0000ff;">
+       <a href="https://qm.qq.com/q/zWGx22aig8" style="color: #0000ff;">
+        【801345182】
+       </a>
+      </span>
+     </p>
+     <!-- <p>
       <div>
-       2.网盘下载 :
+        2.网盘下载 :
   <span style="color: #0000ff;">
     <a href="https://pan.huang1111.cn/s/5X4ngIl" onclick="copyToClipboard('lmitra');" style="color: #0000ff;">
       【链接直达】
@@ -229,7 +237,7 @@ function copyToClipboard(text) {
         alert('复制失败，请手动复制');
     }
 }
-</script>
+</script>                 -->
       </div>
      </p>
     </div>
