--- a/Miniworld-international-old-PC.html
+++ b/Miniworld-international-old-PC.html
@@ -118,7 +118,7 @@
    <div class="article-header theme-box clearfix relative">
     <h1 class="article-title">
      <a href="miniReShade.html">
-      PC迷你世界1.26.5版 | 是史三问呀
+      迷你世界国际版的0.59.10版本？ | 是史三问呀
      </a>
     </h1>
     <div class="article-avatar">
@@ -136,7 +136,7 @@
         </name>
         <div class="px12-sm muted-2-color text-ellipsis">
          <span data-original-title="2024年11月12日 23:01发布" data-placement="bottom" data-toggle="tooltip" title="">
-          11月17日 00:34发布
+          11月30日 12:34发布
          </span>
         </div>
        </div>
@@ -171,7 +171,7 @@
      <h2>
       简介：
      </h2>
-     PC迷你世界1.26.5下载使用教程
+     迷你世界国际版下载使用教程
      <h2>
       制作：
      </h2>
@@ -179,7 +179,8 @@
      <h2>
       教程：
      </h2>
-     <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113532175779282&bvid=BV15KBmYfEjk&cid=26936675896&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="100%" height="500px"></iframe>
+     <p>与PC迷你世界1.26.5下载使用教程一致</p>
+     <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113569622396820&bvid=BV1mazjYYELc&cid=27103201684&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="100%" height="500px"></iframe>
      <h2>
       下载：
      </h2>
