--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!--
+
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +22,7 @@
     </script>
 </head>
 <body>
-    <!-- 提示信息和链接将在跳转失败时显示 -->
+    //提示信息和链接将在跳转失败时显示
     <div id="redirectMessage" style="display:none;">
         <p>本域名暂停使用，请访问以下链接：</p>
         <a href="https://www.scmgzs.top/" target="_blank">https://www.scmgzs.top/</a>
@@ -33,3 +35,14 @@
     </script>
 </body>
 </html>
+
+-->
+
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>网站维护中</title>
+    <div id="redirectMessage" style="display:none;">
+        <p>网站维护中，资源下载请先到官方群或等待服务器维护结束</p>
+        <a href="https://qm.qq.com/q/NnCw882UUs" target="_blank">直达QQ群/</a>
+    </div>
