--- a/index.html
+++ b/index.html
@@ -46,3 +46,4 @@
         <p>网站维护中，资源下载请先到官方群或等待服务器维护结束</p>
         <a href="https://qm.qq.com/q/NnCw882UUs" target="_blank">直达QQ群/</a>
     </div>
+</html>
